--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 :root {
-  --primary-colour: #3882F6;
+  --primary-colour: #3882f6;
   --secondary-colour: #f2f2f2;
   --accent-colour: #ffb084;
   --text-colour: #0d0a08;
-  --light-bg-colour: #E5E7EB;
-  --dark-bg-colour: #1F2937;
+  --light-bg-colour: #e5e7eb;
+  --dark-bg-colour: #1f2937;
 }
 
 @font-face {
@@ -19,8 +19,9 @@
 * {
   font-family: "Synonym Variable", sans-serif;
 }
-html, body {
+
+html,
+body {
   margin: 0;
   padding: 0;
 }
-
