moved responsive styles to bottom of thepag

--- a/style.css
+++ b/style.css
@@ -89,6 +89,33 @@ p {
   background-color: var(--primary-colour);
 }
 
+
+
+.features {
+  padding: 4rem 0rem;
+  margin-bottom: 4rem;
+}
+.features h2 {
+  margin-bottom: 4rem;
+  text-align: center;
+}
+.features .features-container  {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 4rem;
+}
+.features .features-container  .features-item  span {
+  width: 100%;
+  height: auto;
+  padding: 1rem;
+  border: 1px solid var(--primary-colour);
+}
+.features .features-container  .features-item  p {
+  margin-top: 2rem;
+}
+
 @media (min-width: 1024px) {
   .wrapper {
     margin: 0rem auto;
@@ -105,28 +132,7 @@ p {
     gap: 4rem;
     align-items: center;
   }
-}
-
-.features {
-  padding: 4rem 0rem;
-  margin-bottom: 4rem;
-}
-.features h2 {
-  margin-bottom: 4rem;
-  text-align: center;
-}
-.features .features-container  {
-  display: flex;
-  text-align: center;
-  align-items: center;
-  gap: 4rem;
-}
-.features .features-container  .features-item  span {
-  width: 100%;
-  height: auto;
-  padding: 1rem;
-  border: 1px solid var(--primary-colour);
-}
-.features .features-container  .features-item  p {
-  margin-top: 2rem;
+  .features .features-container {
+    flex-direction: row;
+  }
 }
