--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ footer {
   background-color: var(--dark-bg-colour);
 }
 footer h5 {
-  color: var(--light-bg-colour);
+  color: var(--secondary-colour);
   font-weight: 400;
   background-color: var(--dark-bg-colour);
   text-align: center;
