--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ nav ul li a {
 .btn-primary {
   border: transparent;
   border-radius: 4px;
-  color: var(--light-bg-colour);
+  color: var(--background);
   background-color: var(--primary-colour);
   color: var(--background);
   font-weight: 500;
@@ -195,21 +195,21 @@ nav ul li a {
   flex-direction: column;
 }
 .call-to-action div h4 {
-  color: var(--light-bg-colour);
+  color: var(--background);
   margin-bottom: 0.25rem;
   font-weight: 600;
   font-size: 24px !important;
 }
 .call-to-action div p {
-  color: var(--light-bg-colour);
+  color: var(--background);
   font-size: 18px !important;
   opacity: 0.8;
 }
 .call-to-action button {
   border-radius: 4px;
-  border: 1.5px solid var(--light-bg-colour);
+  border: 1.5px solid var(--background);
   background-color: transparent;
-  color: var(--light-bg-colour);
+  color: var(--background);
   font-weight: 600;
   text-transform: uppercase;
   font-size: 14px;
